Fixed white gaps

--- a/app/assets/stylesheets/portals.scss
+++ b/app/assets/stylesheets/portals.scss
@@ -269,6 +269,8 @@ a {
 .portal-experience-photo {
     display: flex;
     padding: 1 rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
